<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfsemibold"
        android:text="@string/welcome_back"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:textColor="@color/grey_primary"
        android:textSize="20sp"
        android:text="@string/i_am_happy_to_see_you_again_continue_where_you_left_by_sigining_in" />


    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/backgrounchange"

        android:drawableStart="@drawable/envelope"
        android:drawablePadding="20dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email_address"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgrounchange" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey_primary"
        android:textSize="20sp"
        android:layout_marginStart="200dp"


        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:width="330dp"
        android:height="56dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"

        android:background="@drawable/roundshapebutton"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:width="40dp"
        android:height="40dp"
        android:text="@string/or"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/grey_primary"
        android:layout_below="@id/button3"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="140dp"/>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/textView7"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/textView8"
        android:layout_below="@id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView5"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:textColor="@color/grey_primary"
        android:textSize="20sp"
        android:text="@string/sign_in_with_google" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView5"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/facebook" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_toRightOf="@id/imageView4"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:textColor="@color/grey_primary"
        android:textSize="20sp"
        android:text="@string/sign_in_with_facebook"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="65dp"
        android:textSize="20sp"
        android:layout_marginEnd="60dp"
        android:text="@string/Dont_have_an_account_sign_up"
        android:layout_below="@id/textView9"
        android:textColor="@color/grey_primary"/>




</RelativeLayout>