<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuntium">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfsemibold"
        android:text="@string/welcome_to_nuntium"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_i_guess_you_are_new_around_here_you_can_start_using_the_application_after_sign_up"
        android:layout_below="@id/textView20"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="325dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView21"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey_lighter"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="textAutoComplete"
        android:padding="20dp"


        android:textColor="@color/black" />


    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey_lighter"
        android:drawableStart="@drawable/envelope"
        android:drawablePadding="20dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp"

        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email_address"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="1dp"
        android:background="@color/grey_lighter" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repeat_password"
        android:layout_below="@id/password"
        android:hint="@string/repeat_password"
        android:textColor="@color/black"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_lighter" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_password"
        android:width="330dp"
        android:height="56dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="313dp"
        tools:layout_editor_absoluteY="729dp"
        android:background="@drawable/roundshapebutton"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_below="@id/repeat_password"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="1056dp" />


</RelativeLayout>