<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newpassword">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfsemibold"
        android:text="@string/create_new_password"
        android:layout_marginStart="15dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_create_a_new_password_dont_forget_it_too"
        android:layout_below="@id/textView13"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:textColor="@color/grey_primary"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_password"
        android:layout_below="@id/textView14"
        android:hint="@string/new_password"
        android:backgroundTint="@color/grey_lighter"
        android:textColor="@color/black"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgrounchange"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_new_password"
        android:layout_below="@id/new_password"
        android:hint="@string/repeat_new_password"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey_lighter"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgrounchange" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_new_password"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:width="330dp"
        android:height="56dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/roundshapebutton"
         />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_marginTop="200dp"
        android:gravity="center"

        android:layout_marginStart="40dp"
        android:layout_marginEnd="51dp"
        android:textSize="20sp"
        android:textColor="@color/grey_primary"
        android:text="@string/didnt_receive_an_email_send_again" />


</RelativeLayout>