<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="forgotpassword"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfsemibold"
        android:text="@string/forgot_word"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/we_need_your_email_address_so_that_we_can_send_you_the_password_reset_code"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_address"
        android:drawableStart="@drawable/envelope"
        android:drawablePadding="20dp"
        android:layout_below="@id/textView12"
        android:hint="@string/email_address"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_marginTop="70dp"
        android:background="@color/grey_lighter"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="20dp"

        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:width="330dp"
        android:height="56dp"
        android:gravity="center"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/roundshapebutton"
        />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:layout_below="@id/button4"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="51dp"
        android:textSize="20sp"
        android:text="@string/remember_password_try_again" />


</RelativeLayout>